2008-12-19  Mark Ellis <mark@mpellis.org.uk>

	* added synce: as a protocol, rapip: will deprecated

2008-06-30  Tejas Guruswamy <masterpatricko@gmail.com>

	* Initial release