@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<mime-info xmlns="http://www.freedesktop.org/standards/shared-mime-info">
+
+  <mime-type type="application/x-pocket-excel">
+    <comment>Pocket Excel spreadsheet</comment>
+    <glob pattern="*.pxl"/>
+  </mime-type>
+
+  <mime-type type="application/x-pocket-word">
+    <comment>Pocket Word document</comment>
+    <magic priority="50">
+      <match value="{\pwi" type="string" offset="0"/>
+    </magic>
+    <glob pattern="*.psw"/>
+    <glob pattern="*.pwi"/>
+  </mime-type>
+
+</mime-info>
